--- a/node/Cargo.toml
+++ b/node/Cargo.toml
@@ -1,20 +1,8 @@
 [package]
-name = "redvin"
+name = "node"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
-
-[workspace]
-
-members = [
-    "metrics",
-    "network",
-    "nostr_relay",
-    "node",
-    "rpc",
-    "config"
-]
