--- a/rpc/Cargo.toml
+++ b/rpc/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 config = { version =  "*", path = "../config" }
 tonic = "0.10.2"
+prost = "0.10"
 tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }
 
 [build-dependencies]
