--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-
+clap = { version = "4.4.11", features = ["cargo"] }
+config = { version =  "*", path = "./config" }
 
 [workspace]
 
